add dinamical project elements

--- a/src/project-list.json
+++ b/src/project-list.json
@@ -1,12 +1,12 @@
 [
     {
-        "name": "html5, css3",
+        "name": "HTML5, CSS3",
         "group": "https://titotrapatonni.github.io/ice-cream-code-ninjas/, https://fstv-electro.github.io/donut-project/",
         "single": ""
         
     },
     {
-        "name": "javascript",
+        "name": "JavaScript",
         "group": "",
         "single": ""
     },
@@ -23,7 +23,7 @@
 
     }, 
     {
-        "name":"typescript",
+        "name":"TypeScript",
         "group": "",
         "single": ""
     }    
