--- a/src/project-list.json
+++ b/src/project-list.json
@@ -1,7 +1,7 @@
 [
     {
         "name": "HTML5, CSS3",
-        "group": "https://titotrapatonni.github.io/ice-cream-code-ninjas/, https://fstv-electro.github.io/donut-project/",
+        "group": "https://titotrapatonni.github.io/ice-cream-code-ninjas,https://fstv-electro.github.io/donut-project",
         "single": ""
         
     },
